  * Sort files inside new diffs generated by dpkg-source lexicographically.
    Closes: #689193
  * Add support for a build_arch option in Dpkg::Deps deps_parse().
    Thanks to Colin Watson <cjwatson@ubuntu.com>. Closes: #697297
  * Move epoch-less or revision-less output logic to Dpkg::Version.
    Based on a patch by Bernhard R. Link <brlink@debian.org>.

  [ Updated programs translations ]
  * Fix typo in Spanish translation of update-alternatives.
    Thanks to Javier Fernandez-Sanguino <jfs@debian.org>. Closes: #713020

  [ Updated man page translations ]
  * Fix wrong translation of "fortify" in French dpkg-buildflags(1) man page.
    Thanks to Christian Perrier <bubulle@debian.org>. Closes: #712976
  * Fix typo in dpkg-source(1) man page French translation.
    Thanks to Cédric Boutillier <boutil@debian.org>. Closes: #708292

 -- Guillem Jover <guillem@debian.org>  Fri, 03 Aug 2012 13:21:00 +0200

dpkg (1.16.10) unstable; urgency=low

  [ Guillem Jover ]
  * Fix typos in 1.16.9 changelog entry. Closes: #691954
    Thanks to Nicolás Alvarez <nicolas.alvarez@gmail.com>.
  * Add missing @LIBLZMA_LIBS@ to Libs.Private in libdpkg.pc.in.
  * Do not use an undefined va_list variable in dpkg_put_errno().
  * Abort installation if we cannot set the security context for a file.
  * Fix OpenPGP armored signature parsing, to be resilient against doctored
    input, including source package control files. Closes: #695919
  * Make sure the OpenGPG armor contains a signature block, even on EOF.
  * Do not accept Armor Header Lines inside a paragraph.
  * Do not abort dselect when multiarch is detected, as that only makes
    users downgrade and hold on an older version w/ worse multiarch support.
  * Fix warning in Dpkg::Source::Archive with «perl -w» due to redefinition
    of getcwd() by removing unused POSIX modules usage. Closes: #700978

  [ Updated programs translations ]
  * Esperanto (Felipe Castro).
  * Spanish (Javier Fernández-Sanguino).